--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ body {
 
 .dashboard{
     display: grid;
-    grid-template-rows: 1fr 6fr 5fr;
+    grid-template-rows: 0.2fr 0.8fr 3fr;
+    overflow: hidden;
     background-color: rgb(62, 133, 255);
     grid-area: 1 / 1/ 3/ 2;
     padding: 5%;
@@ -31,17 +32,18 @@ body {
 
 .right-container{
     display: grid;
-    grid-template-rows: 1fr 4fr;
-    background-color: grey;
+    grid-template-rows: auto 1fr;
+    background-color: rgb(231, 229, 229);
     grid-area: 1 / 2/ 3/ 3;
 }
 
 .header{
     background-color: white;
-}
-
-.content-container{
-    background-color: red;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    box-shadow: 1px 5px rgb(163, 161, 161);
+    padding: 1%;
 }
 
 h1{
@@ -73,8 +75,193 @@ img{
     margin-left: 5%;
 }
 
+.dashboard-links {
+    margin-bottom: 10%;
+}
+
 .Logo{
     display: flex;
     align-items: center;
     gap: 5%;
+}
+
+.search-bar > img{
+    filter: invert(0%);
+    width: 5%;
+}
+
+.user-welcome > img, .user-logo > img[src="icons/account.svg"]{
+    filter: invert(0%);
+    background-color: grey;
+    border-radius: 50%;
+    width: 10%;
+}
+
+.user-logo > img[src="icons/bell-ring-outline.svg"]{ 
+    filter: invert(0%);
+    width: 10%;
+}
+
+.search-bar > input{
+    padding-left: 2%;
+    font-size: 1.5em;
+    width: 80%;
+    height: 50%;
+    border-radius: 50px;
+    border: none;
+    background-color: rgb(217, 215, 215);
+
+}
+
+.user-logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10%;
+}
+
+.user-logo > p {
+    font-size: 1.5em;
+    font-weight: 700;
+}
+
+.search-bar {
+    display: flex;
+    align-items: center;
+    gap: 2%;
+    margin-left: 5%;
+}
+.user-welcome{ 
+    display: flex;
+    align-items: center;
+    margin-left: 5%;
+    gap: 2%;
+}
+
+
+.introduction {
+    font-size: 1.5em;
+}
+
+.user-name {
+    font-size: 2em;
+    font-weight: 500;
+}
+
+.tweet-buttons{ 
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.tweet-buttons > button {
+    width: 25%;
+    height: 50%;
+    border-radius: 50px;
+    font-size: 100%;
+    font-weight: 500;
+    color: white;
+    border: none;
+    background-color: rgb(22, 148, 183);
+}
+
+
+.content-container {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    overflow-y: scroll;
+    padding: 1%;
+}
+
+.projects-container{
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2%;
+}
+
+.card {
+    display: grid;
+    grid-template-rows: 4fr 1fr;
+    height: 100%;
+    background-color: white;
+    padding: 5%;
+    border-radius: 10px;
+    border-left: 10px solid orange;
+}
+
+.content-left, .news-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    padding: 2%;
+    gap: 2%;
+}
+
+.card > div > img {
+    filter: invert(0%);
+    width: 10%;
+}
+
+.card-links{
+    display: flex;
+    gap: 5%;
+    justify-content: end;
+}
+
+.card-content .card-title{ 
+    font-size: 1.3em;
+    font-weight: 500;
+    margin-bottom: 5%;
+}
+
+.content-left > p, .news-container > div > p {
+    font-size: 1.5em; 
+    font-weight: 500;
+}
+
+.announcements-container{
+    display: grid;
+    grid-template-rows: auto;
+    gap: 5%;
+    background-color: white;
+    border-radius: 10px;
+    overflow-y: scroll;
+    padding: 10%;
+}
+
+.announcements-container > .announcement:nth-child(n+2){
+    padding: 5%;
+    border-top: solid 1px black;
+}
+
+.announcement:first-child {
+    padding: 5%;
+    padding-top: 0%;
+}
+
+.news-container > div > p {
+    margin-bottom: 10%;
+}
+
+.trending-grid-container{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    background-color: white;
+    padding: 10%;
+}
+
+.trending-grid-container > div > img{
+    filter: invert(0%);
+    background-color: grey;
+    width: 25%;
+    border-radius: 50%;
+}
+
+.trending-grid-container > div{
+    display: flex;
+    align-items: center;
+    gap: 5%;
+    font-size: 1.5em;
 }
